# claude-teletype

./: .gitignore  README.md  citizen_ctS2000.py  dcmotorsound.md  juki2200.md  juki2200.py  juki_music.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-streaming-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-terminal-simulator/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/claude_teletype/: __init__.py  __main__.py  audio.py  bridge.py  cli.py  config.py  diagnose.py  errors.py  output.py  pacer.py  printer.py  printer_setup_screen.py  profiles.py  settings_screen.py  teletype.py  transcript.py  tui.py  typewriter_screen.py  warnings.py  wordwrap.py
tests/: test_audio.py  test_backends.py  test_bridge.py  test_cli.py  test_config.py  test_config_persistence.py  test_diagnose.py  test_errors.py  test_integration_llm.py  test_output.py  test_pacer.py  test_printer.py  test_printer_setup.py  test_printer_setup_screen.py  test_profiles.py  test_settings_screen.py  test_smart_startup.py  test_teletype.py  test_transcript.py  test_tui.py  test_typewriter_screen.py  test_warnings.py  test_wordwrap.py
(+73 files in other folders)
