[project]
name = "claude-teletype"
version = "0.1.0"
description = "Typewriter-paced Claude Code output for terminal and dot-matrix printers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.23.0",
    "rich>=14.0.0",
]

[project.scripts]
claude-teletype = "claude_teletype.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
